--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <div class="parallax1">
     <div class="wrapper">
-      <div class="item1">Robert</div>
+      <div class="cover1"><div class="item1">Robert</div>
       <div class="item2">Downey</div>
-      <div class="item3">Jr.</div>
+      <div class="item3">Jr.</div></div>
       <div class="item4">
        <i class="fa fa-free-code-camp" style="font-size:20px"></i>
        TRIBUTE PAGE
