--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
   <div class="parallax1">
     <div class="wrapper">
-      <div class="cover1"><div class="item1">Robert</div>
-      <div class="item2">Downey</div>
-      <div class="item3">Jr.</div></div>
+      <div class="cover1"><div class="item1 wordstyle">Robert</div>
+      <div class="item2 wordstyle">Downey</div>
+      <div class="item3 wordstyle">Jr.</div>
       <div class="item4">
        <i class="fa fa-free-code-camp" style="font-size:20px"></i>
        TRIBUTE PAGE
+      </div>
       </div>
     </div>
   </div>
