page 2 and 3 done

--- a/index.html
+++ b/index.html
@@ -26,12 +26,42 @@
   </div>
 
   <div class="parallax2">
-    <div class="quote">
-      <div class="qline">"I know very litle about acting.</div>
-      <div class="qline1">I'm just an incredibly gifted faker."</div>
+    <div class="quote ">
+      <div class="qline wordstyle">"I know very litle about acting.</div>
+      <div class="qline1 wordstyle">I'm just an incredibly gifted faker."</div>
     </div>
   </div>
 
+  <div class="info">
+   <div class="bio">
+     Robert John Downey Jr. is an American actor and singer.
+     </div>
+  <div class="gif">
+  <img class="img1 " src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1518268911/jhg_ctaws1.jpg">
+   </div>
+   <div class="para">
+    <ul>
+      <li>Stupendous acting skills and delicate charm are some of the
+      few traits to express the Ironman, “Robert Downey Jr.”. Debuting
+       at the age of 5 in his father’s film ‘Pound’, Downey Jr got an
+       early exposure to the world of cinemas and glamour alike.
+     </li>
+     <li>Critical and commercial success at a young age wasn’t something surprising
+       for Robert Downey Jr as he received his first Academy Award
+       nomination for playing the title role in the movie ‘Chaplin’.
+     </li>
+     <li>Bearing the brunt of losing some of the best years of his life due to his
+       excessive obsession towards drugs, Robert Downey Jr came back sober
+       and went on to become the highest paid Hollywood actor in three
+       subsequent years from 2012 to 2015 as per the Forbes magazine.
+     </li>
+     <li>With a life as unbelievable and glamorous as a classic Hollywood
+       drama, Robert Downey Jr continues to win over movie lover around the
+       world with his energetic persona and convincing acting performances.
+     </li>
+     </ul>
+    </div>
+   </div>
 </body>
 
 </html>
