page award added

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
    <div class="bio">
      Robert John Downey Jr. is an American actor and singer.
      </div>
-  <div class="gif">
-  <img class="img1 " src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1518268911/jhg_ctaws1.jpg">
-   </div>
+
    <div class="para">
     <ul>
       <li>Stupendous acting skills and delicate charm are some of the
@@ -62,6 +60,40 @@
      </ul>
     </div>
    </div>
+
+<div class="awardpage">
+  <div class="heading-award bio">
+  Awards
+  </div>
+  <div class="awardline">
+    Few mentioned below out of 36 wins and 107 nominations.
+
+  </div>
+
+     <div class="awardlist">
+
+         <div class="awarditem">Golden Globes - Best Performance by an Actor<br/>2010 . Sherlock Holmes</div>
+         <div class="awarditem">Golden Globes - Best Performance by an Actor in a Supporting Role in a Series, Miniseries or Motion Picture Made for Television<br/>1997 . Ally McBeal </div>
+         <div class="awarditem">BEFTA award - Best Actor<br/> 1993 . Chaplin </div>
+         <div class="awarditem">Saturn Award - Best Actor<br/> 2014 . Iron Man Three<br/> 2009 . Iron Man<br/> 1994 . Heart and Souls</div>
+         <div class="awarditem">American Cinematheque Award 2011</div>
+         <div class="awarditem">COFCA Award - Actor of the Year<br/> 2009 . Iron Man, Tropic Thunder</div>
+         <div class="awarditem">Chicago International Film Festival 2003-Career Achievement Award</div>
+         <div class="awarditem">Golden Schmoes - Favorite Celebrity of the Year 2008 and 2009</div>
+         <div class="awarditem">Hasty Pudding Theatricals 2004 - Man of the Year</div>
+         <div class="awarditem">IFTA Award - Best International Actor<br/> 2010 . Sherlock Holmes, 2009 . Iron Man</div>
+         <div class="awarditem">Stanley Kubrick Britannia Award for Excellence in Film 2014</div>
+         <div class="awarditem">Kids' Choice Awards - Favorite Male Butt Kicker<br/> 2014 . Iron Man Three</div>
+         <div class="awarditem">MTV Generation Award - Best Hero<br/>2015 . Iron Man Three</div>
+         <div class="awarditem">People's Choice Awards <br/> 2017 . Favorite Action Movie Actor<br/> 2015 . Favorite Dramatic Movie Actor ,Favorite Movie Actor<br/>2014 . Favorite Action Movie Star<br/>2013 . Favorite Movie Actor, Favorite Movie Superhero -The Avengers</div>
+         <div class="awarditem">Teen Choice Awards - Choice Movie Actor: Action 2013 . I.ron Man Three</div>
+
+     </div>
+     <div class="moreinfo"></div>
+</div>
+<div class="quote">
+</div>
+  <div class="imgaward"> <img src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1520538643/276_jxvliy.jpg"></div>
 </body>
 
 </html>
