movie table added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -69,6 +70,7 @@
     Few mentioned below out of 36 wins and 107 nominations.
 
   </div>
+  <div class="imgaward"><img src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1520564953/giphy_sfvc9q.gif"></div>
 
      <div class="awardlist">
 
@@ -89,11 +91,276 @@
          <div class="awarditem">Teen Choice Awards - Choice Movie Actor: Action 2013 . I.ron Man Three</div>
 
      </div>
+
+
+
+          <div class="movieheading bio">Movies</div>  <!-- table for movies-->
+<div class="movietable">
+
+        <input class="searchbox" id="search" type="text" placeholder="Search this list">
+        <div class="tabbb">
+            <table>
+              <thead>
+                <tr>
+                  <th>year</th>
+                  <th>title</th>
+                </tr>
+              </thead>
+              <tbody id="table">
+                <tr>
+                  <td>1970</td>
+                  <td> <a href="https://en.wikipedia.org/wiki/Pound_(film)" target="_blank">puppy</a></td>
+                </tr>
+                <tr>
+                  <td>1972</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Greaser%27s_Palace" target="_blank">Greaser's Palace</a></td>
+                </tr>
+                <tr>
+                  <td>1975</td>
+                  <td>Moment to Moment</td>
+                </tr>
+                <tr>
+                  <td>1980</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Up_the_Academy" target="_blank">Up the Academy</a></td>
+                </tr>
+                <tr>
+                  <td>1983</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Baby_It%27s_You_(film)" target="_blank">	Baby It's You</a></td>
+                </tr>
+                <tr>
+                  <td>1984</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Firstborn_(1984_film)" target="_blank">  	Firstborn </a></td>
+                </tr>
+                <tr>
+                  <td>1985</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Tuff_Turf" target="_blank"> Tuff Turf </a><br>
+                    <a href="https://en.wikipedia.org/wiki/Girls_Just_Want_to_Have_Fun_(film)" target="_blank">Girls Just Want to Have Fun</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Girls_Just_Want_to_Have_Fun_(film)" target="_blank">Girls Just Want to Have Fun</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Weird_Science_(film)" target="_blank">Weird Science</a><br> Deadwait
+                  </td>
+                </tr>
+                <tr>
+                  <td>1986</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Back_to_School" target="_blank">Back to School</a></td>
+                </tr>
+                <tr>
+                  <td>1987</td>
+                  <td><a href="https://en.wikipedia.org/wiki/The_Pick-up_Artist_(film)" target="_blank">The Pick-up Artist	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Less_Than_Zero_(film)" target="_blank">Less Than Zero	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1988</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Johnny_Be_Good" target="_blank">Johnny Be Good	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Rented_Lips" target="_blank"></a>Rented Lips <br>
+                    <a href="https://en.wikipedia.org/wiki/1969_(film)" target="_blank">1969</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1989</td>
+                  <td><a href=" https://en.wikipedia.org/wiki/That%27s_Adequate " target="_blank">That's Adequate	</a></td>
+                </tr>
+                <tr>
+                  <td>1989</td>
+                  <td><a href=" https://en.wikipedia.org/wiki/True_Believer_(1989_film) " target="_blank">True Believer	</a></td>
+                </tr>
+                <tr>
+                  <td>1989</td>
+                  <td><a href=" https://en.wikipedia.org/wiki/Chances_Are_(film) " target="_blank">Chances Are	</a></td>
+                </tr>
+
+                <tr>
+                  <td>1990</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Air_America_(film)" target="_blank">Air America	</a></td>
+                </tr>
+                <tr>
+                  <td>1991</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Too_Much_Sun" target="_blank">Too Much Sun	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Soapdish" target="_blank">Soapdish	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1992</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Chaplin_(film)" target="_blank">Chaplin	</a></td>
+                </tr>
+                <tr>
+                  <td>1993</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Heart_and_Souls" target="_blank">Heart and Souls	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/The_Last_Party_(film)" target="_blank">The Last Party	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Short_Cuts" target="_blank">Short Cuts	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1994</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Hail_Caesar_(1994_film)" target="_blank">Hail Caesar	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Natural_Born_Killers" target="_blank">Natural Born Killers	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Only_You_(1994_film)" target="_blank">Only You	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1995</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Richard_III_(1995_film)" target="_blank">Richard III	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Home_for_the_Holidays_(1995_film)" target="_blank">Home for the Holidays	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Mr._Willowby%27s_Christmas_Tree" target="_blank">Mr. Willowby's Christmas Tree	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Restoration_(1995_film)" target="_blank">Restoration	</a><br>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1997</td>
+                  <td><a href="https://en.wikipedia.org/wiki/Danger_Zone_(film)" target="_blank">Danger Zone	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/One_Night_Stand_(1997_film)" target="_blank">One Night Stand	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Two_Girls_and_a_Guy" target="_blank">Two Girls and a Guy	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Hugo_Pool" target="_blank">Hugo Pool	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1998</td>
+                  <td><a href="" https://en.wikipedia.org/wiki/The_Gingerbread_Man_(film) target="_blank">The Gingerbread Man	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/U.S._Marshals_(film)" target="_blank">U.S. Marshals	</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1999</td>
+                  <td><a href="https://en.wikipedia.org/wiki/In_Dreams_(film)" target="_blank">In Dreams	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Friends_%26_Lovers_(film)" target="_blank">Friends and Lovers	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Bowfinger" target="_blank">Bowfinger	</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Black_and_White_(1999_drama_film)" target="_blank">Black and White	</a>
+                  </td>
+                </tr>
+                <tr>
+
+                  <tr>
+                    <td>2000</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Wonder_Boys_(film)" target="_blank">Wonder Boys	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2002</td>
+                    <td>Lethargy </td>
+                  </tr>
+                  <tr>
+                    <td>2003</td>
+                    <td>Whatever We Do <br>
+                      <a href="https://en.wikipedia.org/wiki/The_Singing_Detective_(film)" target="_blank">The Singing Detective	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Charlie:_The_Life_and_Art_of_Charles_Chaplin" target="_blank">Charlie: The Life and Art of Charles Chaplin	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Gothika" target="_blank">Gothika	</a><br>
+
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2004</td>
+                    <td> <a href="https://en.wikipedia.org/wiki/Eros_(film)" target="_blank">Eros	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2005</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Game_6_(film)" target="_blank">Game 6	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Kiss_Kiss_Bang_Bang" target="_blank">Kiss Kiss Bang Bang	</a><br> The Outsider <br>
+                      <a href="https://en.wikipedia.org/wiki/Good_Night,_and_Good_Luck" target="_blank"></a>Good Night, and Good Luck <br>
+                      <a href="https://en.wikipedia.org/wiki/Hubert_Selby_Jr:_It/ll_Be_Better_Tomorrow" target="_blank">Hubert Selby Jr	</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2006</td>
+                    <td> <a href="https://en.wikipedia.org/wiki/A_Guide_to_Recognizing_Your_Saints" target="_blank">A Guide to Recognizing Your Saints	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/The_Shaggy_Dog_(2006_film)" target="_blank">The Shaggy Dog	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/A_Scanner_Darkly_(film)" target="_blank">A Scanner Darkly	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Fur_(film)" target="_blank">Fur	</a>
+
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2007</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Zodiac_(film)" target="_blank">Zodiac	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Lucky_You_(film)" target="_blank">Lucky You	</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2008</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Charlie_Bartlett" target="_blank">Charlie Bartlett	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Iron_Man_(2008_film)" target="_blank">Iron Man	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/The_Incredible_Hulk_(film)" target="_blank">The Incredible Hulk	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Tropic_Thunder" target="_blank">Tropic Thunder	</a>
+
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2009</td>
+                    <td><a href="https://en.wikipedia.org/wiki/The_Soloist" target="_blank">The Soloist	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Sherlock_Holmes_(2009_film)" target="_blank">Sherlock Holmes	</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2010</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Iron_Man_2" target="_blank">Iron Man 2	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Love_%26_Distrust" target="_blank">Love and Distrust	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Due_Date" target="_blank">Due Date	</a>
+
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>2011</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Sherlock_Holmes:_A_Game_of_Shadows" target="_blank">Sherlock Holmes: A Game of Shadows	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2012</td>
+                    <td><a href="https://en.wikipedia.org/wiki/The_Avengers_(2012_film)" target="_blank">The Avengers	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2013</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Iron_Man_3" target="_blank">Iron Man 3	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2014</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Chef_(2014_film)" target="_blank">Chef	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/The_Judge_(2014_film)" target="_blank">The Judge	</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2015</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Avengers:_Age_of_Ultron" target="_blank">Avengers: Age of Ultron	Captain America: Civil War	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2016</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Captain_America:_Civil_War" target="_blank">Captain America: Civil War	</a><br>
+
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2017</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Spider-Man:_Homecoming" target="_blank">Spider-Man: Homecoming	</a></td>
+                  </tr>
+                  <tr>
+                    <td>2018</td>
+                    <td><a href="https://en.wikipedia.org/wiki/Avengers:_Infinity_War" target="_blank">Avengers: Infinity War	</a><br> All-Star Weekend</td>
+                  </tr>
+                  <tr>
+                    <td>2019</td>
+                    <td><a href="https://en.wikipedia.org/wiki/The_Voyage_of_Doctor_Dolittle" target="_blank">The Voyage of Doctor Dolittle	</a><br>
+                      <a href="https://en.wikipedia.org/wiki/Untitled_Avengers_film" target="_blank">Untitled Avengers film	</a>
+                    </td>
+                  </tr>
+
+              </tbody>
+            </table>
+
+        </div>
+</div>
+
+
      <div class="moreinfo"></div>
 </div>
 <div class="quote">
 </div>
   <div class="imgaward"> <img src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1520538643/276_jxvliy.jpg"></div>
 </body>
-
+<script>
+$(document).ready(function(){
+  $("#search").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#table tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
 </html>
