footer and info page

--- a/index.html
+++ b/index.html
@@ -347,11 +347,28 @@
 </div>
 
 
-     <div class="moreinfo"></div>
+<div class="moreinfo">
+  <div class="bio">read more about him
+  </div>
+    <div class="pic-info">
+      <img src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1520538643/276_jxvliy.jpg">
+    </div>
+
+
+<div class="links">
+<div class="link1"> <a href=""><i class="fa fa-imdb" style="font-size:56px"></i></a>
 </div>
-<div class="quote">
+<div class="link2"> <a href=""><i class="fa fa-wikipedia-w" style="font-size:56px"></i></a>
 </div>
-  <div class="imgaward"> <img src="http://res.cloudinary.com/dyag5tn5v/image/upload/v1520538643/276_jxvliy.jpg"></div>
+</div>
+</div>
+
+
+<div class="footer">
+  <div class="foottext"> <i class="fa fa-code" style="font-size:18px"></i><code> by devesh_danai</code>
+  </div>
+</div>
+
 </body>
 <script>
 $(document).ready(function(){
