--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
          <div class="awarditem">Golden Globes - Best Performance by an Actor<br/>2010 . Sherlock Holmes</div>
          <div class="awarditem">Golden Globes - Best Performance by an Actor in a Supporting Role in a Series, Miniseries or Motion Picture Made for Television<br/>1997 . Ally McBeal </div>
-         <div class="awarditem">BEFTA award - Best Actor<br/> 1993 . Chaplin </div>
+         <div class="awarditem">BAFTA award - Best Actor<br/> 1993 . Chaplin </div>
          <div class="awarditem">Saturn Award - Best Actor<br/> 2014 . Iron Man Three<br/> 2009 . Iron Man<br/> 1994 . Heart and Souls</div>
          <div class="awarditem">American Cinematheque Award 2011</div>
          <div class="awarditem">COFCA Award - Actor of the Year<br/> 2009 . Iron Man, Tropic Thunder</div>
